--- a/LonelyTwitter/res/values/strings.xml
+++ b/LonelyTwitter/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="app_name">LonelyTwitter</string>
     <string name="save">Save</string>
     <string name="clear">Clear</string>
+    <string name="invalid_tweet">Invalid tweet</string>
+    <string name="important_identifier">*</string>
     
 </resources>
